@startuml
left to right direction
package api{
annotation api {


+NewServer(store Storage, listenAddress string, config Config): *Server
}
class Server {
-store: Storage
-listenAddress: string
-fiberApp: *App
-validator: *Validate
+Start(): error
+ValidateBook(c *Ctx): error
-handleGetBookById(c *Ctx): error
-handleGetAllBooks(c *Ctx): error
-handleCreateBook(c *Ctx): error
-handleDeleteBook(c *Ctx): error
-handleUpdateBook(c *Ctx): error
}
}
package cmd{
annotation cmd {


-main()
}
}
package data{
class Book {
+ID: int
+Title: string
+Description: string
+Price: float64

}
class BookValidationError {
+Field: string
+Tag: string
+Value: string

}
}
package storage{
annotation storage {


+NewInMemoryStorage(): *InMemoryStorage
+NewPostgresqlStorage(db *DB): *PostgresqlStorage
+OpenDB(dbHost string, dbPort int, dbUser string, dbPass string, dbName string): *DB
}
interface Storage{
+Create( *Book): *Book, error
+Get( int): *Book, error
+GetAll(): []Book
+Update( *Book): *Book, error
+Delete( int): error
}
class InMemoryStorage {
+Database: []Book
-idSerial: int
+Get(id int): *Book, error
+GetAll(): []Book
+Create(b *Book): *Book, error
+Update(b *Book): *Book, error
+Delete(id int): error
}
class PostgresqlStorage {
-databaseConnection: *DB
+Get(id int): *Book, error
+GetAll(): []Book
+Create(b *Book): *Book, error
+Update(b *Book): *Book, error
+Delete(id int): error
}
}

"InMemoryStorage" --|> "Storage"
"PostgresqlStorage" --|> "Storage"
@enduml
